--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://gomena.io",
   "devDependencies": {
-    "parcel": "^1.12.4"
+    "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "three": "^0.121.1"
   }
 }
